--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "genref-casper",
     "description": "Customized version of Casper for Gentle Reformation",
     "demo": "https://demo.ghost.io",
-    "version": "2.2.4c",
+    "version": "2.2.5",
     "engines": {
         "ghost": ">=1.2.0",
         "ghost-api": "v3"
